--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "ProjectsHandler"
 version = "0.1.0"
-description = "Handler, Helper, Manager for all your awesome projects"
+description = "Handler, assistant, manager of all your amazing projects"
 authors = [
     {name = "wandderq", email = "wanddr.qq.twink@gmail.com"},
 ]
